Fixed code block spacing

--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -107,7 +107,8 @@ code {
 pre {
   font-family: $codeFont;
   overflow: auto;
-  margin: .5em 0 0;
+  margin-top: 0em;
+  margin-bottom: -1.5em;
 }
 
 .highlight {
@@ -115,5 +116,6 @@ pre {
 
   pre {
     padding: 15px;
+    margin-bottom: 0;
   }
 }
